# permve-ntnu-it3105

./: .gitignore  README.md
module_1/.ipynb_checkpoints/: A* HACKATHON-checkpoint.ipynb  permve-ntnu-it3105-project-1-module-1-checkpoint.ipynb
module_1/input/: run.py  run.pyw  scenario_0.txt  scenario_1.txt  scenario_2.txt  scenario_3.txt  scenario_5.txt  scenario_fail.txt
module_1/ipython/: permve-ntnu-it3105-project-1-module-1.ipynb  widget_navigation_grid_zxc.js
module_1/report/: permve-ntnu-it3105-module-1.tex
module_1/report/images/: vi_class_hierarchy.vsdx
module_2/input/: run.py  run.pyw
module_2/report/: permve-ntnu-it3105-module-2.tex
module_2/report/images/: vi_astar_gac.vsdx
module_3/input/: japonskie.py  run.pyw
module_3/report/: permve-ntnu-it3105-module-3.tex
module_4/program/: .gitignore  2048.cpp  2048.py  CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  vi_2048.cpp  vi_2048.py  vi_2048_ai.cpp  vi_2048_ai.h  vi_2048_board.cpp  vi_2048_board.h  vi_2048_game.cpp  vi_2048_game.h  vi_2048_python.cpp
module_4/report/: permve-ntnu-it3105-module-4.tex
module_5/program/: ann.py  mnist.py
module_5/report/: permve-ntnu-it3105-module-5.tex
module_5/scripts/: master_net_search.bash  master_net_statistics.py
module_6/program/: 2048.py  ai2048demo.py  visuals.py
module_6/report/: permve-ntnu-it3105-module-6.tex
project_1/: A* HACKATHON.ipynb
project_1/input/: scenario_4.txt
vi/: env
vi/graph/: __init__.py  edge.py
vi/search/: bfs.py
vi/tests/: test_breadth_first_search.py  test_recursive_iterative_deepening_search.py
(+606 files in other folders)
